labs/concepts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  labels:
    app: myapp
    type: front-end
spec:
 replicas: 10
 strategy: 
   type: RollingUpdate
   rollingUpdate:
     maxSurge: 1
     maxUnavailable: 0
 selector:
   matchLabels:
    app: myapp
    type: front-end
 template:
    metadata:
      name: myapp-pod
      labels:
        app: myapp
        type: front-end
    spec:
     containers:
     - name: my-container
       image: adongy/hostname-docker
       ports:
         - containerPort: 3000
     - name: nginx
       image: nginx
       ports:
         - containerPort: 8080
