labs/concepts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: myapp
  type: NodePort
  sessionAffinity: ClientIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
